--- a/index.html
+++ b/index.html
@@ -1441,7 +1441,7 @@
         <a class="btn loteria-cta" href="https://oscararmando2.github.io/Loteria/loteria.html" target="_blank" rel="noopener" aria-label="Jugar lotería en línea con tu familia">¡Juega ahora!</a>
       </div>
       <figure class="loteria-media">
-        <img src="https://images.unsplash.com/photo-1521577352947-9bb58764b69a?auto=format&fit=crop&w=900&q=80" alt="Familia latina jugando lotería con cartones coloridos" loading="lazy">
+        <img src="https://scontent-qro1-1.xx.fbcdn.net/v/t39.30808-6/571212017_798623846483485_7127450510447971433_n.jpg?_nc_cat=100&ccb=1-7&_nc_sid=127cfc&_nc_ohc=k85onK-uoksQ7kNvwFN9vpC&_nc_oc=AdkOs_X8Xe9v8-FmMhUw73-zUF3tP_rMVC4LAgpnjeYqdJvTaIy1AV9Ajsm7pGTpbT7UC343ZU7IWabB9fDJXLRs&_nc_zt=23&_nc_ht=scontent-qro1-1.xx&_nc_gid=spn32O9SaqxemaDoB0Q0dw&oh=00_AfdNUdeaS7Py7iYsODwLHXbvRPwl5gBF3K9pZXwQBfunhA&oe=69047F1B" loading="lazy">
       </figure>
     </div>
   </section>
