--- a/index.html
+++ b/index.html
@@ -475,6 +475,115 @@
       }
     }
 
+    /* ===== Nadie como el Mexiquense ===== */
+    .mexiquense-section{
+      background:linear-gradient(180deg, rgba(255,255,255,0) 0%, rgba(29,132,69,.06) 100%);
+      padding: clamp(3rem, 6vw, 4.5rem) 0;
+    }
+    .mexiquense-section .container{
+      display:flex;
+      flex-direction:column;
+      gap:1.75rem;
+    }
+    .mexiquense-header{
+      text-align:center;
+      display:flex;
+      flex-direction:column;
+      gap:.75rem;
+    }
+    .mexiquense-title{
+      margin:0;
+      font-size: clamp(1.8rem, 5vw, 2.4rem);
+      color:var(--verde);
+    }
+    .mexiquense-subtitle{
+      margin:0 auto;
+      max-width:540px;
+      color:var(--muted);
+      font-size:1rem;
+    }
+    .mexiquense-scroll{
+      width:var(--container);
+      margin:0 auto;
+      display:flex;
+      gap:1.2rem;
+      overflow-x:auto;
+      padding:.35rem 0 1rem;
+      scroll-snap-type:x mandatory;
+      -webkit-overflow-scrolling:touch;
+    }
+    .mexiquense-scroll::-webkit-scrollbar{
+      height:10px;
+    }
+    .mexiquense-scroll::-webkit-scrollbar-thumb{
+      background:rgba(0,0,0,.15);
+      border-radius:999px;
+    }
+    .mexiquense-card{
+      flex:0 0 auto;
+      min-width: clamp(220px, 68vw, 260px);
+      background:var(--blanco);
+      border-radius:20px;
+      box-shadow: var(--shadow);
+      overflow:hidden;
+      display:flex;
+      flex-direction:column;
+      scroll-snap-align:start;
+      transition: transform .25s ease, box-shadow .25s ease;
+    }
+    .mexiquense-card:hover{
+      transform: translateY(-6px);
+      box-shadow:0 18px 34px rgba(0,0,0,.14);
+    }
+    .mexiquense-card__media{
+      position:relative;
+      padding-top:60%;
+      overflow:hidden;
+      background:linear-gradient(135deg, rgba(29,132,69,.08), rgba(212,84,56,.08));
+    }
+    .mexiquense-card__media img{
+      position:absolute;
+      inset:0;
+      width:100%;
+      height:100%;
+      object-fit:cover;
+      transition: transform .4s ease;
+    }
+    .mexiquense-card:hover .mexiquense-card__media img{
+      transform: scale(1.05);
+    }
+    .mexiquense-card__body{
+      padding:1.2rem 1.3rem 1.4rem;
+      display:flex;
+      flex-direction:column;
+      gap:.65rem;
+    }
+    .mexiquense-card__title{
+      margin:0;
+      font-size:1.02rem;
+      font-weight:700;
+      color:var(--texto);
+    }
+    .mexiquense-card__price{
+      margin:0;
+      font-size:1.05rem;
+      font-weight:700;
+      color:var(--rojo);
+    }
+    .mexiquense-card__note{
+      margin:0;
+      font-size:.85rem;
+      color:var(--muted);
+    }
+    @media (max-width: 620px){
+      .mexiquense-section .container{
+        align-items:flex-start;
+        text-align:left;
+      }
+      .mexiquense-header{ align-items:flex-start; text-align:left; }
+      .mexiquense-subtitle{ max-width:100%; }
+    }
+
     /* ===== Recetas ===== */
 .recipes-hero{
   position:relative;
@@ -1425,6 +1534,148 @@
     </div>
   </section>
 
+  <section class="mexiquense-section" aria-labelledby="mexiquense-title">
+    <div class="container">
+      <div class="mexiquense-header">
+        <h2 id="mexiquense-title" class="mexiquense-title">Nadie como el Mexiquense</h2>
+        <p class="mexiquense-subtitle">Productos a precios que solo encontrarás con nosotros.</p>
+      </div>
+    </div>
+    <div class="mexiquense-scroll" role="list" aria-label="Productos exclusivos Nadie como el Mexiquense">
+      <article class="mexiquense-card" role="listitem">
+        <figure class="mexiquense-card__media" aria-hidden="true">
+          <img src="https://images.unsplash.com/photo-1589923188900-85dae523342b?auto=format&fit=crop&w=700&q=80" alt="Cartón de huevos frescos Best Choice">
+        </figure>
+        <div class="mexiquense-card__body">
+          <h3 class="mexiquense-card__title">Huevo Best Choice 12 pack</h3>
+          <p class="mexiquense-card__price">$1.99</p>
+          <p class="mexiquense-card__note">Perfectos para tus desayunos diarios.</p>
+        </div>
+      </article>
+
+      <article class="mexiquense-card" role="listitem">
+        <figure class="mexiquense-card__media" aria-hidden="true">
+          <img src="https://images.unsplash.com/photo-1582719478250-c89cae4dc85b?auto=format&fit=crop&w=700&q=80" alt="Botellas de leche Prairie Farms">
+        </figure>
+        <div class="mexiquense-card__body">
+          <h3 class="mexiquense-card__title">Leche Prairie Farms</h3>
+          <p class="mexiquense-card__price">$1.99</p>
+          <p class="mexiquense-card__note">Galón fresco y cremoso para toda la familia.</p>
+        </div>
+      </article>
+
+      <article class="mexiquense-card" role="listitem">
+        <figure class="mexiquense-card__media" aria-hidden="true">
+          <img src="https://images.unsplash.com/photo-1604908178395-52a6c1af8b67?auto=format&fit=crop&w=700&q=80" alt="Paquete de tortillas de maíz">
+        </figure>
+        <div class="mexiquense-card__body">
+          <h3 class="mexiquense-card__title">Tortillas Guerrero 80 ct</h3>
+          <p class="mexiquense-card__price">$3.49</p>
+          <p class="mexiquense-card__note">Suaves y listas para tus tacos favoritos.</p>
+        </div>
+      </article>
+
+      <article class="mexiquense-card" role="listitem">
+        <figure class="mexiquense-card__media" aria-hidden="true">
+          <img src="https://images.unsplash.com/photo-1586201375761-83865001e31b?auto=format&fit=crop&w=700&q=80" alt="Manojos de cilantro fresco">
+        </figure>
+        <div class="mexiquense-card__body">
+          <h3 class="mexiquense-card__title">Cilantro Fresco por manojo</h3>
+          <p class="mexiquense-card__price">$0.69</p>
+          <p class="mexiquense-card__note">Aromático, ideal para salsas y guisos.</p>
+        </div>
+      </article>
+
+      <article class="mexiquense-card" role="listitem">
+        <figure class="mexiquense-card__media" aria-hidden="true">
+          <img src="https://images.unsplash.com/photo-1580915411954-282cb1b0d780?auto=format&fit=crop&w=700&q=80" alt="Queso fresco redondo sobre tabla">
+        </figure>
+        <div class="mexiquense-card__body">
+          <h3 class="mexiquense-card__title">Queso Fresco El Mexiquense</h3>
+          <p class="mexiquense-card__price">$2.99</p>
+          <p class="mexiquense-card__note">Tradición artesanal para tus platillos.</p>
+        </div>
+      </article>
+
+      <article class="mexiquense-card" role="listitem">
+        <figure class="mexiquense-card__media" aria-hidden="true">
+          <img src="https://images.unsplash.com/photo-1498837167922-ddd27525d352?auto=format&fit=crop&w=700&q=80" alt="Varios chiles secos y especias">
+        </figure>
+        <div class="mexiquense-card__body">
+          <h3 class="mexiquense-card__title">Variedad de Chiles Secos</h3>
+          <p class="mexiquense-card__price">$4.50</p>
+          <p class="mexiquense-card__note">Ancho, guajillo y pasilla listos para tu mole.</p>
+        </div>
+      </article>
+
+      <article class="mexiquense-card" role="listitem">
+        <figure class="mexiquense-card__media" aria-hidden="true">
+          <img src="https://images.unsplash.com/photo-1502741338009-cac2772e18bc?auto=format&fit=crop&w=700&q=80" alt="Bolsa de café tostado">
+        </figure>
+        <div class="mexiquense-card__body">
+          <h3 class="mexiquense-card__title">Café de Olla Molido 12 oz</h3>
+          <p class="mexiquense-card__price">$5.75</p>
+          <p class="mexiquense-card__note">Notas de canela y piloncillo recién tostadas.</p>
+        </div>
+      </article>
+
+      <article class="mexiquense-card" role="listitem">
+        <figure class="mexiquense-card__media" aria-hidden="true">
+          <img src="https://images.unsplash.com/photo-1612874471953-1dd91e5dba4e?auto=format&fit=crop&w=700&q=80" alt="Racimo de plátanos maduros">
+        </figure>
+        <div class="mexiquense-card__body">
+          <h3 class="mexiquense-card__title">Plátano Macho por libra</h3>
+          <p class="mexiquense-card__price">$0.79</p>
+          <p class="mexiquense-card__note">Imprescindibles para tostones y postres.</p>
+        </div>
+      </article>
+
+      <article class="mexiquense-card" role="listitem">
+        <figure class="mexiquense-card__media" aria-hidden="true">
+          <img src="https://images.unsplash.com/photo-1580915411970-82ebaddea1a3?auto=format&fit=crop&w=700&q=80" alt="Paquete de crema mexicana">
+        </figure>
+        <div class="mexiquense-card__body">
+          <h3 class="mexiquense-card__title">Crema Mexicana 16 oz</h3>
+          <p class="mexiquense-card__price">$2.59</p>
+          <p class="mexiquense-card__note">Textura suave para enchiladas y antojitos.</p>
+        </div>
+      </article>
+
+      <article class="mexiquense-card" role="listitem">
+        <figure class="mexiquense-card__media" aria-hidden="true">
+          <img src="https://images.unsplash.com/photo-1505252585461-04db1eb84625?auto=format&fit=crop&w=700&q=80" alt="Frasco de salsa verde">
+        </figure>
+        <div class="mexiquense-card__body">
+          <h3 class="mexiquense-card__title">Salsa Verde Casera 24 oz</h3>
+          <p class="mexiquense-card__price">$3.25</p>
+          <p class="mexiquense-card__note">Hecha con tomatillo y cilantro fresco.</p>
+        </div>
+      </article>
+
+      <article class="mexiquense-card" role="listitem">
+        <figure class="mexiquense-card__media" aria-hidden="true">
+          <img src="https://images.unsplash.com/photo-1516685018646-549198525c1b?auto=format&fit=crop&w=700&q=80" alt="Bolsa de arroz integral">
+        </figure>
+        <div class="mexiquense-card__body">
+          <h3 class="mexiquense-card__title">Arroz Integral 5 lb</h3>
+          <p class="mexiquense-card__price">$3.99</p>
+          <p class="mexiquense-card__note">Fuente de energía para toda la semana.</p>
+        </div>
+      </article>
+
+      <article class="mexiquense-card" role="listitem">
+        <figure class="mexiquense-card__media" aria-hidden="true">
+          <img src="https://images.unsplash.com/photo-1453831210728-695502f9f795?auto=format&fit=crop&w=700&q=80" alt="Varios chiles serranos">
+        </figure>
+        <div class="mexiquense-card__body">
+          <h3 class="mexiquense-card__title">Chile Serrano por libra</h3>
+          <p class="mexiquense-card__price">$1.19</p>
+          <p class="mexiquense-card__note">Picor vibrante para tus salsas caseras.</p>
+        </div>
+      </article>
+    </div>
+  </section>
+
   <!-- ===== BANNER LOTERÍA ===== -->
   <section class="loteria-banner" aria-labelledby="loteria-titulo">
     <div class="container loteria-content">
@@ -1799,6 +2050,24 @@
   </footer>
 
   <script>
+    // Forzar posición inicial al recargar en navegadores que restauran el scroll (ej. Safari)
+    if ('scrollRestoration' in history) {
+      history.scrollRestoration = 'manual';
+    }
+
+    const resetScrollTop = () => {
+      if (!window.location.hash) {
+        window.scrollTo(0, 0);
+      }
+    };
+
+    window.addEventListener('load', resetScrollTop);
+    window.addEventListener('pageshow', (event) => {
+      if (event.persisted) {
+        resetScrollTop();
+      }
+    });
+
     // Año dinámico
     document.getElementById('year').textContent = new Date().getFullYear();
 
