Update promotional content in index.html

--- a/index.html
+++ b/index.html
@@ -1333,9 +1333,9 @@
                  alt="Caja de frutas variadas" loading="lazy">
           </div>
           <div class="promo-body">
-            <span class="badge">NUEVO</span>
-            <h3 class="promo-title">Canasta de frutas premium</h3>
-            <p class="promo-text">Calidad de temporada para tu mesa, al mejor precio.</p>
+            <span class="badge">SERVICO</span>
+            <h3 class="promo-title">Cambio de cheques</h3>
+            <p class="promo-text">Cambia tus cheques a efectivo con nosotros, (Sujeto a Disponibilidad) </p>
             <a class="btn promo-cta" href="#productos">Comprar</a>
           </div>
         </article>
