Update promo text for cheque conversion service

--- a/index.html
+++ b/index.html
@@ -1335,7 +1335,7 @@
           <div class="promo-body">
             <span class="badge">SERVICO</span>
             <h3 class="promo-title">Cambio de cheques</h3>
-            <p class="promo-text">Cambia tus cheques a efectivo con nosotros, (Sujeto a Disponibilidad) </p>
+            <p class="promo-text"¡Convierte tus cheques en efectivo al instante con nosotros! Rápido, seguro y confiable, ¡hazlo hoy mismo! (Sujeto a disponibilidad de fondos). </p>
             <a class="btn promo-cta" href="#productos">Comprar</a>
           </div>
         </article>
