Improve accessibility and scroll behavior

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <meta name="description" content="El Mexiquense Market: frescura diaria, precios justos, ofertas y recetas para tu cocina." />
   <meta name="theme-color" content="#1D8445" />
   <meta http-equiv="Cache-Control" content="public, max-age=604800" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
 
   <style>
@@ -30,6 +32,23 @@
     body{
       margin:0; font-family:'Poppins',system-ui,-apple-system,Segoe UI,Roboto,sans-serif;
       color:var(--texto); background:var(--crema); line-height:1.5;
+    }
+    .skip-link{
+      position:absolute;
+      left:50%;
+      transform:translate(-50%, -120%);
+      padding:.75rem 1.15rem;
+      background:var(--verde);
+      color:var(--blanco);
+      border-radius:999px;
+      font-weight:600;
+      z-index:1100;
+      transition:transform .25s ease;
+    }
+    .skip-link:focus{
+      transform:translate(-50%, 10px);
+      outline:3px solid var(--blanco);
+      outline-offset:2px;
     }
     img{ max-width:100%; display:block; }
     a{ color:inherit; text-decoration:none; }
@@ -77,6 +96,13 @@
     }
     .hero h1{ font-size: clamp(2rem, 5.5vw, 3.2rem); margin:0 0 .5rem; line-height:1.08; }
     .hero p{ font-size:clamp(1rem, 2.5vw, 1.2rem); opacity:.95; margin:0 0 1.25rem; }
+    .hero-actions{
+      display:flex;
+      justify-content:center;
+      gap:.65rem;
+      flex-wrap:wrap;
+      margin-top:1.5rem;
+    }
     .btn{
       display:inline-flex; align-items:center; justify-content:center; gap:.5rem;
       background:var(--verde); color:white; font-weight:700;
@@ -473,6 +499,115 @@
         min-width:260px;
         height:360px;
       }
+    }
+
+    /* ===== Nadie como el Mexiquense ===== */
+    .mexiquense-section{
+      background:linear-gradient(180deg, rgba(255,255,255,0) 0%, rgba(29,132,69,.06) 100%);
+      padding: clamp(3rem, 6vw, 4.5rem) 0;
+    }
+    .mexiquense-section .container{
+      display:flex;
+      flex-direction:column;
+      gap:1.75rem;
+    }
+    .mexiquense-header{
+      text-align:center;
+      display:flex;
+      flex-direction:column;
+      gap:.75rem;
+    }
+    .mexiquense-title{
+      margin:0;
+      font-size: clamp(1.8rem, 5vw, 2.4rem);
+      color:var(--verde);
+    }
+    .mexiquense-subtitle{
+      margin:0 auto;
+      max-width:540px;
+      color:var(--muted);
+      font-size:1rem;
+    }
+    .mexiquense-scroll{
+      width:var(--container);
+      margin:0 auto;
+      display:flex;
+      gap:1.2rem;
+      overflow-x:auto;
+      padding:.35rem 0 1rem;
+      scroll-snap-type:x mandatory;
+      -webkit-overflow-scrolling:touch;
+    }
+    .mexiquense-scroll::-webkit-scrollbar{
+      height:10px;
+    }
+    .mexiquense-scroll::-webkit-scrollbar-thumb{
+      background:rgba(0,0,0,.15);
+      border-radius:999px;
+    }
+    .mexiquense-card{
+      flex:0 0 auto;
+      min-width: clamp(220px, 68vw, 260px);
+      background:var(--blanco);
+      border-radius:20px;
+      box-shadow: var(--shadow);
+      overflow:hidden;
+      display:flex;
+      flex-direction:column;
+      scroll-snap-align:start;
+      transition: transform .25s ease, box-shadow .25s ease;
+    }
+    .mexiquense-card:hover{
+      transform: translateY(-6px);
+      box-shadow:0 18px 34px rgba(0,0,0,.14);
+    }
+    .mexiquense-card__media{
+      position:relative;
+      padding-top:60%;
+      overflow:hidden;
+      background:linear-gradient(135deg, rgba(29,132,69,.08), rgba(212,84,56,.08));
+    }
+    .mexiquense-card__media img{
+      position:absolute;
+      inset:0;
+      width:100%;
+      height:100%;
+      object-fit:cover;
+      transition: transform .4s ease;
+    }
+    .mexiquense-card:hover .mexiquense-card__media img{
+      transform: scale(1.05);
+    }
+    .mexiquense-card__body{
+      padding:1.2rem 1.3rem 1.4rem;
+      display:flex;
+      flex-direction:column;
+      gap:.65rem;
+    }
+    .mexiquense-card__title{
+      margin:0;
+      font-size:1.02rem;
+      font-weight:700;
+      color:var(--texto);
+    }
+    .mexiquense-card__price{
+      margin:0;
+      font-size:1.05rem;
+      font-weight:700;
+      color:var(--rojo);
+    }
+    .mexiquense-card__note{
+      margin:0;
+      font-size:.85rem;
+      color:var(--muted);
+    }
+    @media (max-width: 620px){
+      .mexiquense-section .container{
+        align-items:flex-start;
+        text-align:left;
+      }
+      .mexiquense-header{ align-items:flex-start; text-align:left; }
+      .mexiquense-subtitle{ max-width:100%; }
     }
 
     /* ===== Recetas ===== */
@@ -1143,6 +1278,7 @@
   </style>
 </head>
 <body class="page-home" data-page="home">
+  <a class="skip-link" href="#contenido-principal">Saltar al contenido principal</a>
 
   <!-- ===== NAV ===== -->
   <header>
@@ -1160,13 +1296,16 @@
     </div>
   </header>
 
+  <main id="contenido-principal" tabindex="-1">
   <!-- ===== HERO ===== -->
   <section id="inicio" class="hero">
     <div class="container">
       <h1>El Sabor de México en Cada Compra</h1>
       <p>Frescura diaria • Precios justos • Calidad garantizada</p>
-      <a class="btn" href="#promociones">Ver promociones</a>
-      <a class="btn btn-outline" href="#ofertas" style="margin-left:.5rem;">Ofertas del día</a>
+      <div class="hero-actions" role="group" aria-label="Acciones destacadas">
+        <a class="btn" href="#promociones">Ver promociones</a>
+        <a class="btn btn-outline" href="#ofertas">Ofertas del día</a>
+      </div>
     </div>
   </section>
 
@@ -1422,6 +1561,148 @@
         </div>
       </div>
       <div class="recipes-preview" id="recipesPreview" role="list" aria-live="polite"></div>
+    </div>
+  </section>
+
+  <section class="mexiquense-section" aria-labelledby="mexiquense-title">
+    <div class="container">
+      <div class="mexiquense-header">
+        <h2 id="mexiquense-title" class="mexiquense-title">Nadie como el Mexiquense</h2>
+        <p class="mexiquense-subtitle">Productos a precios que solo encontrarás con nosotros.</p>
+      </div>
+    </div>
+    <div class="mexiquense-scroll" role="list" aria-label="Productos exclusivos Nadie como el Mexiquense">
+      <article class="mexiquense-card" role="listitem">
+        <figure class="mexiquense-card__media" aria-hidden="true">
+          <img src="https://images.unsplash.com/photo-1589923188900-85dae523342b?auto=format&fit=crop&w=700&q=80" alt="Cartón de huevos frescos Best Choice" loading="lazy">
+        </figure>
+        <div class="mexiquense-card__body">
+          <h3 class="mexiquense-card__title">Huevo Best Choice 12 pack</h3>
+          <p class="mexiquense-card__price">$1.99</p>
+          <p class="mexiquense-card__note">Perfectos para tus desayunos diarios.</p>
+        </div>
+      </article>
+
+      <article class="mexiquense-card" role="listitem">
+        <figure class="mexiquense-card__media" aria-hidden="true">
+          <img src="https://images.unsplash.com/photo-1582719478250-c89cae4dc85b?auto=format&fit=crop&w=700&q=80" alt="Botellas de leche Prairie Farms" loading="lazy">
+        </figure>
+        <div class="mexiquense-card__body">
+          <h3 class="mexiquense-card__title">Leche Prairie Farms</h3>
+          <p class="mexiquense-card__price">$1.99</p>
+          <p class="mexiquense-card__note">Galón fresco y cremoso para toda la familia.</p>
+        </div>
+      </article>
+
+      <article class="mexiquense-card" role="listitem">
+        <figure class="mexiquense-card__media" aria-hidden="true">
+          <img src="https://images.unsplash.com/photo-1604908178395-52a6c1af8b67?auto=format&fit=crop&w=700&q=80" alt="Paquete de tortillas de maíz" loading="lazy">
+        </figure>
+        <div class="mexiquense-card__body">
+          <h3 class="mexiquense-card__title">Tortillas Guerrero 80 ct</h3>
+          <p class="mexiquense-card__price">$3.49</p>
+          <p class="mexiquense-card__note">Suaves y listas para tus tacos favoritos.</p>
+        </div>
+      </article>
+
+      <article class="mexiquense-card" role="listitem">
+        <figure class="mexiquense-card__media" aria-hidden="true">
+          <img src="https://images.unsplash.com/photo-1586201375761-83865001e31b?auto=format&fit=crop&w=700&q=80" alt="Manojos de cilantro fresco" loading="lazy">
+        </figure>
+        <div class="mexiquense-card__body">
+          <h3 class="mexiquense-card__title">Cilantro Fresco por manojo</h3>
+          <p class="mexiquense-card__price">$0.69</p>
+          <p class="mexiquense-card__note">Aromático, ideal para salsas y guisos.</p>
+        </div>
+      </article>
+
+      <article class="mexiquense-card" role="listitem">
+        <figure class="mexiquense-card__media" aria-hidden="true">
+          <img src="https://images.unsplash.com/photo-1580915411954-282cb1b0d780?auto=format&fit=crop&w=700&q=80" alt="Queso fresco redondo sobre tabla" loading="lazy">
+        </figure>
+        <div class="mexiquense-card__body">
+          <h3 class="mexiquense-card__title">Queso Fresco El Mexiquense</h3>
+          <p class="mexiquense-card__price">$2.99</p>
+          <p class="mexiquense-card__note">Tradición artesanal para tus platillos.</p>
+        </div>
+      </article>
+
+      <article class="mexiquense-card" role="listitem">
+        <figure class="mexiquense-card__media" aria-hidden="true">
+          <img src="https://images.unsplash.com/photo-1498837167922-ddd27525d352?auto=format&fit=crop&w=700&q=80" alt="Varios chiles secos y especias" loading="lazy">
+        </figure>
+        <div class="mexiquense-card__body">
+          <h3 class="mexiquense-card__title">Variedad de Chiles Secos</h3>
+          <p class="mexiquense-card__price">$4.50</p>
+          <p class="mexiquense-card__note">Ancho, guajillo y pasilla listos para tu mole.</p>
+        </div>
+      </article>
+
+      <article class="mexiquense-card" role="listitem">
+        <figure class="mexiquense-card__media" aria-hidden="true">
+          <img src="https://images.unsplash.com/photo-1502741338009-cac2772e18bc?auto=format&fit=crop&w=700&q=80" alt="Bolsa de café tostado" loading="lazy">
+        </figure>
+        <div class="mexiquense-card__body">
+          <h3 class="mexiquense-card__title">Café de Olla Molido 12 oz</h3>
+          <p class="mexiquense-card__price">$5.75</p>
+          <p class="mexiquense-card__note">Notas de canela y piloncillo recién tostadas.</p>
+        </div>
+      </article>
+
+      <article class="mexiquense-card" role="listitem">
+        <figure class="mexiquense-card__media" aria-hidden="true">
+          <img src="https://images.unsplash.com/photo-1612874471953-1dd91e5dba4e?auto=format&fit=crop&w=700&q=80" alt="Racimo de plátanos maduros" loading="lazy">
+        </figure>
+        <div class="mexiquense-card__body">
+          <h3 class="mexiquense-card__title">Plátano Macho por libra</h3>
+          <p class="mexiquense-card__price">$0.79</p>
+          <p class="mexiquense-card__note">Imprescindibles para tostones y postres.</p>
+        </div>
+      </article>
+
+      <article class="mexiquense-card" role="listitem">
+        <figure class="mexiquense-card__media" aria-hidden="true">
+          <img src="https://images.unsplash.com/photo-1580915411970-82ebaddea1a3?auto=format&fit=crop&w=700&q=80" alt="Paquete de crema mexicana" loading="lazy">
+        </figure>
+        <div class="mexiquense-card__body">
+          <h3 class="mexiquense-card__title">Crema Mexicana 16 oz</h3>
+          <p class="mexiquense-card__price">$2.59</p>
+          <p class="mexiquense-card__note">Textura suave para enchiladas y antojitos.</p>
+        </div>
+      </article>
+
+      <article class="mexiquense-card" role="listitem">
+        <figure class="mexiquense-card__media" aria-hidden="true">
+          <img src="https://images.unsplash.com/photo-1505252585461-04db1eb84625?auto=format&fit=crop&w=700&q=80" alt="Frasco de salsa verde" loading="lazy">
+        </figure>
+        <div class="mexiquense-card__body">
+          <h3 class="mexiquense-card__title">Salsa Verde Casera 24 oz</h3>
+          <p class="mexiquense-card__price">$3.25</p>
+          <p class="mexiquense-card__note">Hecha con tomatillo y cilantro fresco.</p>
+        </div>
+      </article>
+
+      <article class="mexiquense-card" role="listitem">
+        <figure class="mexiquense-card__media" aria-hidden="true">
+          <img src="https://images.unsplash.com/photo-1516685018646-549198525c1b?auto=format&fit=crop&w=700&q=80" alt="Bolsa de arroz integral" loading="lazy">
+        </figure>
+        <div class="mexiquense-card__body">
+          <h3 class="mexiquense-card__title">Arroz Integral 5 lb</h3>
+          <p class="mexiquense-card__price">$3.99</p>
+          <p class="mexiquense-card__note">Fuente de energía para toda la semana.</p>
+        </div>
+      </article>
+
+      <article class="mexiquense-card" role="listitem">
+        <figure class="mexiquense-card__media" aria-hidden="true">
+          <img src="https://images.unsplash.com/photo-1453831210728-695502f9f795?auto=format&fit=crop&w=700&q=80" alt="Varios chiles serranos" loading="lazy">
+        </figure>
+        <div class="mexiquense-card__body">
+          <h3 class="mexiquense-card__title">Chile Serrano por libra</h3>
+          <p class="mexiquense-card__price">$1.19</p>
+          <p class="mexiquense-card__note">Picor vibrante para tus salsas caseras.</p>
+        </div>
+      </article>
     </div>
   </section>
 
@@ -1791,6 +2072,8 @@
     </div>
   </section>
 
+  </main>
+
   <footer>
     <div class="foot">
       <span>© <span id="year"></span> El Mexiquense Market</span>
@@ -1799,6 +2082,50 @@
   </footer>
 
   <script>
+    // Corrección de restauración de scroll al recargar en Safari
+    (function(){
+      const ua = navigator.userAgent || '';
+      const isSafari = /Safari/i.test(ua) && !/Chrome|CriOS|Chromium|Android|Edg/i.test(ua);
+      if (!isSafari || window.location.hash) {
+        return;
+      }
+
+      function getNavigationEntry(){
+        if (window.performance && typeof window.performance.getEntriesByType === 'function') {
+          const entries = window.performance.getEntriesByType('navigation');
+          if (entries && entries.length) {
+            return entries[0];
+          }
+        }
+        return null;
+      }
+
+      const navigationEntry = getNavigationEntry();
+      const isReloadNavigation = navigationEntry ? navigationEntry.type === 'reload' : (window.performance && window.performance.navigation ? window.performance.navigation.type === 1 : false);
+      if (!isReloadNavigation) {
+        return;
+      }
+
+      let previousRestoration = null;
+      if ('scrollRestoration' in history) {
+        previousRestoration = history.scrollRestoration;
+        history.scrollRestoration = 'manual';
+      }
+
+      const resetScroll = function(){
+        window.scrollTo(0, 0);
+        if (previousRestoration !== null) {
+          history.scrollRestoration = previousRestoration;
+        }
+      };
+
+      if (document.readyState === 'complete') {
+        resetScroll();
+      } else {
+        window.addEventListener('load', resetScroll, { once: true });
+      }
+    }());
+
     // Año dinámico
     document.getElementById('year').textContent = new Date().getFullYear();
 
@@ -1846,22 +2173,74 @@
         }
       }, 6000);
 
+      const stopAutoScroll = () => {
+        if (auto) {
+          clearInterval(auto);
+          auto = null;
+        }
+      };
+
       ['pointerdown','touchstart','wheel','keydown','focusin'].forEach(evt=>{
-        track.addEventListener(evt, ()=> { clearInterval(auto); }, { passive:true });
+        track.addEventListener(evt, stopAutoScroll, { passive:true });
+      });
+
+      document.addEventListener('visibilitychange', () => {
+        if (document.visibilityState !== 'visible') {
+          stopAutoScroll();
+        }
       });
 
       prev.addEventListener('keydown', (e)=>{ if(e.key==='Enter' || e.key===' ') prev.click(); });
       next.addEventListener('keydown', (e)=>{ if(e.key==='Enter' || e.key===' ') next.click(); });
     }
 
-    // Suavizar anclas (fallback)
-    document.querySelectorAll('a[href^="#"]').forEach(anchor=>{
-      anchor.addEventListener('click', e=>{
-        const id = anchor.getAttribute('href');
-        if(id.length>1 && document.querySelector(id)){
-          e.preventDefault();
-          document.querySelector(id).scrollIntoView({ behavior:'smooth', block:'start' });
+    // Navegación accesible con desplazamiento suave
+    const prefersReducedMotion = window.matchMedia && window.matchMedia('(prefers-reduced-motion: reduce)').matches;
+    document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+      anchor.addEventListener('click', event => {
+        const hash = anchor.getAttribute('href');
+        if (!hash || hash.length <= 1) {
+          return;
         }
+
+        const target = document.querySelector(hash);
+        if (!target) {
+          return;
+        }
+
+        event.preventDefault();
+        const behavior = prefersReducedMotion ? 'auto' : 'smooth';
+        target.scrollIntoView({ behavior, block: 'start' });
+
+        const focusTarget = () => {
+          const previousTabIndex = target.getAttribute('tabindex');
+          const needsTemporaryTabIndex = target.tabIndex === -1;
+          if (needsTemporaryTabIndex) {
+            target.setAttribute('tabindex', '-1');
+          }
+
+          if (typeof target.focus === 'function') {
+            target.focus({ preventScroll: true });
+          }
+
+          if (needsTemporaryTabIndex) {
+            target.addEventListener('blur', () => {
+              if (previousTabIndex !== null) {
+                target.setAttribute('tabindex', previousTabIndex);
+              } else {
+                target.removeAttribute('tabindex');
+              }
+            }, { once: true });
+          }
+        };
+
+        if (window.history && typeof window.history.pushState === 'function') {
+          window.history.pushState(null, '', hash);
+        } else {
+          window.location.hash = hash;
+        }
+
+        window.setTimeout(focusTarget, prefersReducedMotion ? 0 : 250);
       });
     });
 
@@ -2059,23 +2438,3 @@
   </script>
 </body>
 </html>
-
-  <!-- Vista previa productos destacados:
-  Harina P.A.N. Maíz Blanco — $4.99
-  Maseca Maíz Instantáneo — $3.99
-  Frijoles Negros Listos — $2.79
-  Salsa Picante Artesanal — $5.49
-  Queso Fresco Artesanal — $6.89
-  Chiles Poblanos Frescos — $3.49
-  Pan Dulce Variado — $7.25
-  Recetas destacadas actuales:
-  Guacamole cremoso tradicional — 15 min
-  Sopa de tortilla ahumada — 35 min
-  Elote callejero con queso cotija — 25 min
-  Carnitas estilo Michoacán — 2 h
-  Tacos al pastor caseros — 1 h 10 min
-  Mole poblano con pollo — 1 h 45 min
-  Churros con chocolate espeso — 45 min
-  Pastel tres leches con cajeta — 1 h 30 min
-  Arroz con leche y canela — 50 min
-  -->
