--- a/index.html
+++ b/index.html
@@ -1388,17 +1388,17 @@
       <div class="feature-copy">
         <span>Tienda en línea</span>
         <h2>Compra tus favoritos sin salir de casa</h2>
-        <p>Haz tu súper en minutos y recibe productos frescos, ingredientes auténticos y antojitos mexicanos directo a tu puerta.</p>
+        <p>Elige prodcutos elegibles en nuestra tienda en linea, recibe tus compras en la puerta de tu casa, productos auténticos para tus antojitos mexicanos.</p>
         <ul class="feature-list">
           <li>Inventario actualizado con ofertas exclusivas en línea.</li>
-          <li>Entrega a domicilio o recolección rápida en tienda.</li>
+          <li>Entrega a domicilio.</li>
           <li>Pagos seguros y confirmación inmediata de tu pedido.</li>
         </ul>
         <div class="feature-actions">
           <a class="btn" href="https://latinstorenearme.com/" target="_blank" rel="noopener">Comprar en línea</a>
           <a class="btn btn-outline" href="#contacto">Habla con un asesor</a>
         </div>
-        <p class="feature-note">Pedidos en línea disponibles 24/7 y entregas el mismo día según disponibilidad.</p>
+        <p class="feature-note">Pedidos en línea disponibles 24/7 en nuestra tienda en linea</p>
       </div>
     </div>
   </section>
