--- a/index.html
+++ b/index.html
@@ -1476,7 +1476,7 @@
       <article class="product-card" role="listitem">
         <span class="offer-badge" aria-live="polite"><span>MIERCOLAZO DE DESCUENTO %</span><span class="timer countdown-timer">--:--:--</span></span>
         <div class="product-media" aria-hidden="true">
-          <img src="https://images.unsplash.com/photo-1604908177063-1233ebd9ad29?auto=format&fit=crop&w=800&q=80" alt="Paquete de harina P.A.N." loading="lazy">
+          <img src="https://m.media-amazon.com/images/I/71Lxe9rdyQL.jpg" alt="Paquete de harina P.A.N." loading="lazy">
         </div>
         <div class="product-body">
           <h3 class="product-title">MIERCOLAZO DE DESCUENTO %</h3>
