--- a/index.html
+++ b/index.html
@@ -2507,13 +2507,17 @@
 
     // ===== Ofertas del día =====
     const offersSection = document.getElementById('ofertas');
-    function syncOffersMode(){
+    function refreshOffersVisibility(){
       if(!offersSection) return;
-      const isWednesday = new Date().getDay() === 3;
-      offersSection.dataset.offerMode = isWednesday ? 'wednesday' : 'flash';
+      const today = new Date();
+      if(today.getDay() === 3){
+        offersSection.style.display = '';
+      } else {
+        offersSection.style.display = 'none';
+      }
     }
-    syncOffersMode();
-    setInterval(syncOffersMode, 60 * 60 * 1000);
+    refreshOffersVisibility();
+    setInterval(refreshOffersVisibility, 60 * 60 * 1000);
 
     const countdownTimers = document.querySelectorAll('.countdown-timer');
     function formatPart(value){ return String(value).padStart(2, '0'); }
