--- a/index.html
+++ b/index.html
@@ -1686,11 +1686,11 @@
             <img src="https://images.unsplash.com/photo-1514996937319-344454492b37?auto=format&fit=crop&w=600&q=80" alt="Docena de huevos frescos" loading="lazy">
           </figure>
           <div class="mexiquense-card__body">
-            <span class="mexiquense-card__tag">Básicos</span>
+            <span class="mexiquense-card__tag">$1.99</span>
             <h3>Huevo Best Choice 12 pack</h3>
             <p>Docena fresca para desayunos llenos de energía.</p>
-            <div class="mexiquense-card__price" aria-label="Categoría: Básicos">
-              <span class="mexiquense-card__amount">BÁSICOS</span>
+            <div class="mexiquense-card__price" aria-label="Precio: $1.99">
+              <span class="mexiquense-card__amount">$1.99</span>
             </div>
           </div>
         </article>
@@ -1699,11 +1699,11 @@
             <img src="https://images.unsplash.com/photo-1582719478250-c89cae4dc85b?auto=format&fit=crop&w=600&q=80" alt="Botellas de leche sobre una mesa" loading="lazy">
           </figure>
           <div class="mexiquense-card__body">
-            <span class="mexiquense-card__tag">Lácteos</span>
+            <span class="mexiquense-card__tag">$2.79</span>
             <h3>Leche Prairie Farms 1L</h3>
             <p>Suave y cremosa, perfecta para tus licuados matutinos.</p>
-            <div class="mexiquense-card__price" aria-label="Categoría: Lácteos">
-              <span class="mexiquense-card__amount">LÁCTEOS</span>
+            <div class="mexiquense-card__price" aria-label="Precio: $2.79">
+              <span class="mexiquense-card__amount">$2.79</span>
             </div>
           </div>
         </article>
@@ -1712,11 +1712,11 @@
             <img src="https://images.unsplash.com/photo-1483695028939-5bb13f8648b0?auto=format&fit=crop&w=600&q=80" alt="Pan dulce tradicional mexicano" loading="lazy">
           </figure>
           <div class="mexiquense-card__body">
-            <span class="mexiquense-card__tag">Panadería</span>
+            <span class="mexiquense-card__tag">$4.25</span>
             <h3>Pan dulce tricolor</h3>
             <p>La docena consentida para las tardes con cafecito.</p>
-            <div class="mexiquense-card__price" aria-label="Categoría: Panadería">
-              <span class="mexiquense-card__amount">PANADERÍA</span>
+            <div class="mexiquense-card__price" aria-label="Precio: $4.25">
+              <span class="mexiquense-card__amount">$4.25</span>
             </div>
           </div>
         </article>
@@ -1725,11 +1725,11 @@
             <img src="https://images.unsplash.com/photo-1599785209793-fdffb2f38105?auto=format&fit=crop&w=600&q=80" alt="Tortillas recién hechas apiladas" loading="lazy">
           </figure>
           <div class="mexiquense-card__body">
-            <span class="mexiquense-card__tag">Cocina</span>
+            <span class="mexiquense-card__tag">$2.49</span>
             <h3>Tortillas Guerrero 30 ct</h3>
             <p>Tortilla suave ideal para tacos y quesadillas al instante.</p>
-            <div class="mexiquense-card__price" aria-label="Categoría: Cocina">
-              <span class="mexiquense-card__amount">COCINA</span>
+            <div class="mexiquense-card__price" aria-label="Precio: $2.49">
+              <span class="mexiquense-card__amount">$2.49</span>
             </div>
           </div>
         </article>
@@ -1738,11 +1738,11 @@
             <img src="https://images.unsplash.com/photo-1526318896980-cf78c088247c?auto=format&fit=crop&w=600&q=80" alt="Frijoles negros servidos en un plato" loading="lazy">
           </figure>
           <div class="mexiquense-card__body">
-            <span class="mexiquense-card__tag">Despensa</span>
+            <span class="mexiquense-card__tag">$1.89</span>
             <h3>Frijoles La Costeña 28 oz</h3>
             <p>Sazón casero listo para calentar y servir.</p>
-            <div class="mexiquense-card__price" aria-label="Categoría: Despensa">
-              <span class="mexiquense-card__amount">DESPENSA</span>
+            <div class="mexiquense-card__price" aria-label="Precio: $1.89">
+              <span class="mexiquense-card__amount">$1.89</span>
             </div>
           </div>
         </article>
@@ -1751,11 +1751,11 @@
             <img src="https://images.unsplash.com/photo-1542444592-0df4a1d1641d?auto=format&fit=crop&w=600&q=80" alt="Arroz blanco servido en un tazón" loading="lazy">
           </figure>
           <div class="mexiquense-card__body">
-            <span class="mexiquense-card__tag">Cereales</span>
+            <span class="mexiquense-card__tag">$2.29</span>
             <h3>Arroz Mahatma 2 lb</h3>
             <p>Grano suelto para acompañar cualquier platillo.</p>
-            <div class="mexiquense-card__price" aria-label="Categoría: Cereales">
-              <span class="mexiquense-card__amount">CEREALES</span>
+            <div class="mexiquense-card__price" aria-label="Precio: $2.29">
+              <span class="mexiquense-card__amount">$2.29</span>
             </div>
           </div>
         </article>
@@ -1764,11 +1764,11 @@
             <img src="https://images.unsplash.com/photo-1474871256005-e04c67d9028f?auto=format&fit=crop&w=600&q=80" alt="Botella de aceite vegetal sobre una mesa" loading="lazy">
           </figure>
           <div class="mexiquense-card__body">
-            <span class="mexiquense-card__tag">Despensa</span>
+            <span class="mexiquense-card__tag">$4.99</span>
             <h3>Aceite Mazola 32 oz</h3>
             <p>Ligero y rendidor para tus recetas fritas y horneadas.</p>
-            <div class="mexiquense-card__price" aria-label="Categoría: Despensa">
-              <span class="mexiquense-card__amount">DESPENSA</span>
+            <div class="mexiquense-card__price" aria-label="Precio: $4.99">
+              <span class="mexiquense-card__amount">$4.99</span>
             </div>
           </div>
         </article>
@@ -1777,11 +1777,11 @@
             <img src="https://images.unsplash.com/photo-1518554262033-95a38d2f4383?auto=format&fit=crop&w=600&q=80" alt="Queso fresco cortado sobre tabla" loading="lazy">
           </figure>
           <div class="mexiquense-card__body">
-            <span class="mexiquense-card__tag">Lácteos</span>
+            <span class="mexiquense-card__tag">$5.49</span>
             <h3>Queso Panela El Mexiquense 14 oz</h3>
             <p>Textura suave que se dora perfecto en la plancha.</p>
-            <div class="mexiquense-card__price" aria-label="Categoría: Lácteos">
-              <span class="mexiquense-card__amount">LÁCTEOS</span>
+            <div class="mexiquense-card__price" aria-label="Precio: $5.49">
+              <span class="mexiquense-card__amount">$5.49</span>
             </div>
           </div>
         </article>
@@ -1790,11 +1790,11 @@
             <img src="https://images.unsplash.com/photo-1589712235273-01f96f2ec1ca?auto=format&fit=crop&w=600&q=80" alt="Crema fresca servida en un tazón" loading="lazy">
           </figure>
           <div class="mexiquense-card__body">
-            <span class="mexiquense-card__tag">Lácteos</span>
+            <span class="mexiquense-card__tag">$3.19</span>
             <h3>Crema La Vaquita 16 oz</h3>
             <p>Cremosa y ligera para tus antojitos favoritos.</p>
-            <div class="mexiquense-card__price" aria-label="Categoría: Lácteos">
-              <span class="mexiquense-card__amount">LÁCTEOS</span>
+            <div class="mexiquense-card__price" aria-label="Precio: $3.19">
+              <span class="mexiquense-card__amount">$3.19</span>
             </div>
           </div>
         </article>
@@ -1803,11 +1803,11 @@
             <img src="https://images.unsplash.com/photo-1514516430032-7f40ed986177?auto=format&fit=crop&w=600&q=80" alt="Botellas de salsa picante" loading="lazy">
           </figure>
           <div class="mexiquense-card__body">
-            <span class="mexiquense-card__tag">Salsas</span>
+            <span class="mexiquense-card__tag">$1.59</span>
             <h3>Salsa Valentina 1 lt</h3>
             <p>El toque picante que nunca falta en la mesa mexicana.</p>
-            <div class="mexiquense-card__price" aria-label="Categoría: Salsas">
-              <span class="mexiquense-card__amount">SALSAS</span>
+            <div class="mexiquense-card__price" aria-label="Precio: $1.59">
+              <span class="mexiquense-card__amount">$1.59</span>
             </div>
           </div>
         </article>
@@ -1816,11 +1816,11 @@
             <img src="https://images.unsplash.com/photo-1511690656952-34342bb7c2f2?auto=format&fit=crop&w=600&q=80" alt="Chiles jalapeños frescos" loading="lazy">
           </figure>
           <div class="mexiquense-card__body">
-            <span class="mexiquense-card__tag">Enlatados</span>
+            <span class="mexiquense-card__tag">$2.39</span>
             <h3>Chiles Jalapeños La Morena 26 oz</h3>
             <p>Listos para picar y acompañar tus platillos.</p>
-            <div class="mexiquense-card__price" aria-label="Categoría: Enlatados">
-              <span class="mexiquense-card__amount">ENLATADOS</span>
+            <div class="mexiquense-card__price" aria-label="Precio: $2.39">
+              <span class="mexiquense-card__amount">$2.39</span>
             </div>
           </div>
         </article>
@@ -1829,11 +1829,11 @@
             <img src="https://images.unsplash.com/photo-1509042239860-f550ce710b93?auto=format&fit=crop&w=600&q=80" alt="Taza de café de olla humeante" loading="lazy">
           </figure>
           <div class="mexiquense-card__body">
-            <span class="mexiquense-card__tag">Gourmet</span>
+            <span class="mexiquense-card__tag">$6.99</span>
             <h3>Café de olla molido 12 oz</h3>
             <p>Aroma especiado para iniciar el día con calidez.</p>
-            <div class="mexiquense-card__price" aria-label="Categoría: Gourmet">
-              <span class="mexiquense-card__amount">GOURMET</span>
+            <div class="mexiquense-card__price" aria-label="Precio: $6.99">
+              <span class="mexiquense-card__amount">$6.99</span>
             </div>
           </div>
         </article>
